--- a/SoftfyWeb/SoftfyWeb/SoftfyWeb/Views/VistasPlaylists/Detalle.cshtml
+++ b/SoftfyWeb/SoftfyWeb/SoftfyWeb/Views/VistasPlaylists/Detalle.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Detalle de Playlist";
 }
 
-<h2>Detalle de Playlist</h2>
+<h2>Detalle de Album</h2>
 
 @if (TempData["Error"] != null)
 {
