--- a/SoftfyWeb/SoftfyWeb/SoftfyWeb/Views/VistasPlaylists/Index.cshtml
+++ b/SoftfyWeb/SoftfyWeb/SoftfyWeb/Views/VistasPlaylists/Index.cshtml
@@ -6,8 +6,14 @@
 <h2>@ViewData["Title"]</h2>
 <p>
     <a asp-action="Crear" class="btn btn-primary">Nueva Playlist</a>
-    <a asp-action="MeGusta" class="btn btn-secondary ms-2">Me Gusta</a>
+
+    @* Mostrar el botón "Me Gusta" solo si el usuario es oyente o oyente premium *@
+    @if (User.IsInRole("Oyente") || User.IsInRole("OyentePremium"))
+    {
+        <a asp-action="MeGusta" class="btn btn-secondary ms-2">Me Gusta</a>
+    }
 </p>
+
 <table class="table table-bordered">
     <thead>
         <tr>
