--- a/SoftfyWeb/SoftfyWeb/SoftfyWeb/Views/Shared/_Layout.cshtml
+++ b/SoftfyWeb/SoftfyWeb/SoftfyWeb/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <!-- Menú principal -->
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
@@ -25,8 +26,46 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
                         </li>
+
+                        @* Opciones sólo para Artista *@
+                        @if (User.Identity?.IsAuthenticated == true && User.IsInRole("Artista"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark"
+                                   asp-area=""
+                                   asp-controller="VistasCanciones"
+                                   asp-action="MisCanciones">
+                                    Mis Canciones
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark"
+                                   asp-area=""
+                                   asp-controller="VistasCanciones"
+                                   asp-action="CrearCancion">
+                                    Subir Canción
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark"
+                                   asp-area=""
+                                   asp-controller="VistasPlaylists"
+                                   asp-action="Index">
+                                    Mis Albums
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark"
+                                   asp-area=""
+                                   asp-controller="VistasPlaylists"
+                                   asp-action="Crear">
+                                    Crear Album
+                                </a>
+                            </li>                        
+                        }
                     </ul>
 
+                    <!-- Enlaces de autenticación -->
                     <ul class="navbar-nav">
                         @if (User.Identity?.IsAuthenticated == true)
                         {
@@ -49,10 +88,10 @@
                 </div>
             </div>
         </nav>
-
     </header>
+
     <div class="container">
-        <main role="main" class="pb-3">  
+        <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
@@ -62,6 +101,7 @@
             &copy; 2025 - SoftfyWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
