--- a/SoftfyWeb/SoftfyWeb/SoftfyWeb/Views/VistaPlaylists/MiPlaylist.cshtml
+++ b/SoftfyWeb/SoftfyWeb/SoftfyWeb/Views/VistaPlaylists/MiPlaylist.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Inicio";
+    ViewData["Title"] = "My Playlist";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -38,7 +38,7 @@
                 <a class="nav-link" data-bs-toggle="collapse" href="#playlistMenu">
                     <i class="fas fa-list"></i> Playlist <i class="fas fa-plus-circle small-icon"></i>
                 </a>
-                <div class="collapse" id="playlistMenu">
+                <div class="collapse show" id="playlistMenu">
                     <ul class="nav flex-column ms-3">
                         <li>
                             <a class="nav-link" asp-controller="VistaPlaylists" asp-action="Index">
@@ -46,7 +46,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="nav-link" asp-controller="VistaPlaylists" asp-action="MiPlaylist">
+                            <a class="nav-link active" asp-controller="VistaPlaylists" asp-action="MiPlaylist">
                                 <i class="fas fa-music"></i> My playlist
                             </a>
                         </li>
@@ -75,8 +75,8 @@
         </header>
 
         <section>
-            <h1>Home</h1>
-            <p>Suggestions for you</p>
+            <h1>My Playlist</h1>
+            <p>Your personal playlists</p>
         </section>
     </main>
 </div>
